--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,7 +5,7 @@
       "default": true
     }
   ],
-  "name": "dx-empty",
+  "name": "dx-emptyf",
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "55.0"
